--- a/.gitmodules
+++ b/.gitmodules
@@ -1,18 +1,18 @@
 [submodule "mock-haskell-project-01"]
-	path = mock-haskell-project-01
+	path = 01-simple
 	url = git@github.com:Ptival/mock-haskell-project-01.git
 [submodule "mock-haskell-project-02"]
-	path = mock-haskell-project-02
+	path = 02-subdirectory
 	url = git@github.com:Ptival/mock-haskell-project-02.git
 [submodule "mock-haskell-project-03"]
-	path = mock-haskell-project-03
+	path = 03-library-and-executable
 	url = git@github.com:Ptival/mock-haskell-project-03.git
 [submodule "mock-haskell-project-04"]
-	path = mock-haskell-project-04
+	path = 04-internal-library
 	url = git@github.com:Ptival/mock-haskell-project-04.git
 [submodule "mock-haskell-project-05"]
-	path = mock-haskell-project-05
+	path = 05-git-submodule
 	url = git@github.com:Ptival/mock-haskell-project-05.git
 [submodule "mock-haskell-project-06"]
-	path = mock-haskell-project-06
+	path = 06-default-extensions
 	url = git@github.com:Ptival/mock-haskell-project-06.git
